--- a/Vostok/inventario/templates/inventario/ver_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_material_inventario.html
@@ -4,109 +4,135 @@
 {% block content %}
 
     <!--  Template US-5  -->
-    <div class="container">
+    <div class="container-fluid">
         {% if user.is_authenticated %}
-             <br>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <div class="container-fluid">
-                        <h1> <i class="zmdi zmdi-shape"> </i>Inventario {{ inventario_pk}} </h1>
+            <br>
+
+                <div class="row">
+                    <div class="col-sm">
+
+                            <h1><i class="zmdi zmdi-shape"> </i>Inventario {{ inventario_pk }} </h1>
+
                     </div>
-                </div>
-                <div class="col-sm">
-                    <div  class="nav justify-content-end">
-                        <a href="{% url 'inventario:agregar_material_inventario' inventario_pk %}"><button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light "><i class="fas fa-plus"></i> Agregar material</button></a>
-                    </div>
-
-                </div>
-            </div>
-
-        {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-
-        <table class="table table-hover table-dark">
-          <thead>
-            <tr>
-                <th scope="col">Material</th>
-                <th scope="col">Cantidad</th>
-                <th scope="col">Editar Cantidad</th>
-                <th scope="col">Eliminar</th>
-
-            </tr>
-          </thead>
-        <tbody>
-
-        {% for material in inventarios %}
-
-            <tr>
-                <td scope="row">{{ material.material.nombre}}</td>
-                <td>{{ material.cantidad }}
-                <td><a href="#editar-modal-{{ material.material }}" class="dropdown-item" data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a"><button class="btn btn-success"><i class="fas fa-edit"></i></button></a></td>
-                <td><button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalConfirmacion"><i class="fas fa-trash"></i></button></td>
-            </tr>
-
-        <div class="modal fade" id="modalConfirmacion" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Confirmación</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    ¿Estas seguro que deseas eliminar el material?
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                    <a href="/inventario/{{inventario_pk}}/ver/material_inventario/{{material.id}}"><button type="button" class="btn btn-primary">Aceptar</button></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-        {% endfor %}
-        <!--  Template US-5  -->
-
-        {% for material in inventarios %}
-            <!-- US02 -->
-
-                <div id="editar-modal-{{ material.material }}" class="modal-demo">
-                      <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <h4 class="custom-modal-title" id="titulo_inventario">Estas editando el material {{material.material}}</h4>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="Custombox.modal.close();">
-                              <span aria-hidden="true">&times;</span>
-                            </button>
-                            <form method="post" action="{% url "inventario:editar_cantidad_material"  inventario_id=inventario_pk material_id=material.material.id%}">
-                                {% csrf_token %}
-                                <div class="modal-body">
-                                    {{ form.as_p}}
-                              <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" onclick="Custombox.modal.close();">Cancelar</button>
-                                <button type="submit" class="btn btn-primary">Guardar</button>
-                              </div>
-                            </form>
+                    <div class="col-sm">
+                        <div class="nav justify-content-end">
+                            <a href="{% url 'inventario:agregar_material_inventario' inventario_pk %}">
+                                <button type="button"
+                                        class="btn btn-bordred-success waves-effect  width-md waves-light "><i
+                                        class="fas fa-plus"></i> Agregar material
+                                </button>
+                            </a>
                         </div>
-                      </div>
+
+                    </div>
                 </div>
-            <!-- US02 -->
-            </div>
-        </div>
-            {% endfor %}
+                <a href="{% url 'inventario:ver_inventario' %}">
+                    <button class="btn btn-dark" type="button" data-toggle="modal"
+                            data-target="#modalCancel"><i
+                            class="fas fa-arrow-left"></i></button>
+                </a>
+                <br><br>
 
-        </tbody>
-        </table>
+                {% if messages %}
+                    <ul class="messages">
+                        {% for message in messages %}
+                            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+
+                <table class="table table-hover table-dark">
+                    <thead>
+                    <tr>
+                        <th scope="col">Material</th>
+                        <th scope="col">Cantidad</th>
+                        <th scope="col">Editar Cantidad</th>
+                        <th scope="col">Eliminar</th>
+
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    {% for material in inventarios %}
+
+                        <tr>
+                            <td scope="row">{{ material.material.nombre }}</td>
+                            <td>{{ material.cantidad }}
+                            <td><a href="#editar-modal-{{ material.material }}" class="dropdown-item"
+                                   data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a">
+                                <button class="btn btn-success"><i class="fas fa-edit"></i></button>
+                            </a></td>
+                            <td>
+                                <button type="button" class="btn btn-danger" data-toggle="modal"
+                                        data-target="#modalConfirmacion"><i class="fas fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <div class="modal fade" id="modalConfirmacion" tabindex="-1" role="dialog"
+                             aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Confirmación</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        ¿Estas seguro que deseas eliminar el material?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar
+                                        </button>
+                                        <a href="/inventario/{{ inventario_pk }}/ver/material_inventario/{{ material.id }}">
+                                            <button type="button" class="btn btn-primary">Aceptar</button>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    {% endfor %}
+                    <!--  Template US-5  -->
+
+                    {% for material in inventarios %}
+                        <!-- US02 -->
+
+                        <div id="editar-modal-{{ material.material }}" class="modal-demo">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <h4 class="custom-modal-title" id="titulo_inventario">Estas editando el
+                                        material {{ material.material }}</h4>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+                                            onclick="Custombox.modal.close();">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                    <form method="post"
+                                          action="{% url "inventario:editar_cantidad_material"  inventario_id=inventario_pk material_id=material.material.id %}">
+                                        {% csrf_token %}
+                                        <div class="modal-body">
+                                            {{ form.as_p }}
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary"
+                                                        onclick="Custombox.modal.close();">Cancelar
+                                                </button>
+                                                <button type="submit" class="btn btn-primary">Guardar</button>
+                                            </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- US02 -->
+                        </div>
+                        </div>
+                    {% endfor %}
+
+            </tbody>
+            </table>
 
 
 
-{% else %}
-    <h1>No estas autenticado</h1>
-{% endif %}
+        {% else %}
+            <h1>No estas autenticado</h1>
+        {% endif %}
 {% endblock %}
