--- a/Vostok/material/templates/material/editar_material.html
+++ b/Vostok/material/templates/material/editar_material.html
@@ -6,45 +6,49 @@
 {% block content %}
     <div class="container-fluid">
         {% if user.is_authenticated %}
-            <h1><i class="zmdi zmdi-shape"> </i>Editar Material {{ material.nombre }}</h1>
+            <h1 align="center"><i class="zmdi zmdi-shape"> </i>Editar Material {{ material.nombre }}</h1>
 
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12">
-                        <div class="card-box">
-                            <table class="table table-hover table-dark">
-                                <tbody>
-                                <div class="content">
-                                    <!-- Start Content-->
-                                    <div class="container-fluid">
-                                        <div class="col-sm-12 col-md-6">
-                                            <div id="datatable_filter" class="dataTables_filter">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- #### US#34 #### -->
+                    <div class="col-md-8 offset-lg-2">
+                        <div class="row">
+                            <div class="col mb-3">
+                                <a href="{% url 'material:ver_material' %}"><button class="btn btn-dark" type="button" data-toggle="modal"
+                                        data-target="#modalCancel"><i
+                                        class="fas fa-arrow-left"></i></button></a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="card-box">
                                     <form method="post" action="{% url "material:edit" material.id %}">
                                         {% csrf_token %}
                                         <div class="modal-body">
                                             {{ form.as_p }}
                                         </div>
-                                        <div align="center">
-                                            <a href="{% url "material:ver_material" %}">
-                                                <button type="button" class="btn btn-primary">Regresar</button>
-                                            </a>
-                                            <button type="submit" class="btn btn-success">Guardar</button>
-                                        </div>
+                                        <div class="row">
+                                    <div class="col-md-2">
+                                        <a href="{% url 'material:ver_material' %}"><button class="btn btn-danger" type="button" data-toggle="modal"
+                                                data-target="#modalCancel">Cancelar
+                                        </button></a>
+                                    </div>
+                                    <div class="col-md-2 offset-md-8">
+                                        <button class="btn btn-success waves-effect waves-light" type="submit">Guardar
+                                        </button>
+                                    </div>
+                                </div>
                                     </form>
 
                                     <!-- #### US#34 #### -->
                                 </div> <!-- end row -->
                                 </tbody>
-                            </table>
-                        </div> <!-- container-fluid -->
+                                </table>
+                            </div> <!-- container-fluid -->
+                        </div>
                     </div>
                 </div>
             </div>
-
+            </div>
             </div>
 
 
