--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -27,6 +27,7 @@
                             <th>Inventario</th>
                             <th>Editar</th>
                             <th>Eliminar</th>
+                            <th>Revisiones</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -45,6 +46,11 @@
                                            data-plugin="custommodal" data-overlaycolor="#36404a">
                                         <button type="button" class="btn btn-danger" data-toggle="modal"
                                                 data-target="#modalConfirmacion"><i class="fas fa-trash"></i></button>
+                                    </a></td>
+                                    <td><a href="{% url "revision:revisiones"  id=ambulancia.id %}"
+                                           data-animation="blur" data-overlaycolor="#36404a">
+                                        <button type="button" class=" btn btn-primary"><i class="fas fa-eye"></i>
+                                        </button>
                                     </a></td>
                                 </tr>
                             {% endif %}
