--- a/Vostok/inventario/templates/inventario/agregar_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/agregar_material_inventario.html
@@ -26,7 +26,7 @@
                         <button class="btn btn-dark" type="button" data-toggle="modal" data-target="#modalCancel">
                             <i class="fas fa-arrow-left"></i>
                         </button>
-                    </div>git
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col">
