Arreglar dashboard encabezado

--- a/Vostok/dashboard/templates/dashboard/base.html
+++ b/Vostok/dashboard/templates/dashboard/base.html
@@ -55,7 +55,7 @@
                         <li class="dropdown notification-list">
                             <a class="nav-link dropdown-toggle nav-user mr-0 waves-effect" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
                                 <span class="pro-user-name ml-1">
-                                    USER'S NAME <i class="mdi mdi-chevron-down"></i>
+                                    RESCATE 1    <i class="mdi mdi-chevron-down"></i>
                                 </span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right profile-dropdown ">
@@ -88,10 +88,10 @@
                         <a href="#" class="logo text-center">
                             <span class="logo-lg">
                                 <!-- <img src="{% static 'dashboard/images/logo-light.png' %}" alt="" height="16"> -->
-                                <span class="logo-lg-text-light">LOGO DE VOSTOK</span>
+                                <span class="logo-lg-text-light"></span>
                             </span>
                             <span class="logo-sm">
-                                <span class="logo-sm-text-dark">logo de vostok</span>
+                                <span class="logo-sm-text-dark"></span>
                                 <!-- <img src="{% static 'dashboard/images/logo-sm.png' %}" alt="" height="24"> -->
                             </span>
                         </a>
@@ -105,7 +105,7 @@
                         </li>
 
                         <li>
-                            <h4 class="page-title-main">LOGO DE RESCATE</h4>
+                            <h4 class="page-title-main"></h4>
                         </li>
 
                     </ul>
