--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -8,14 +8,21 @@
     {% if user.is_authenticated %}
         <div class="container-fluid">
             <h1><i class="zmdi zmdi-shape"> </i>Inventarios </h1>
-            <div align="right">
+
+            <div class="row">
+                 <div id="datatable_filter" class="col"><label>Buscar:<input
+                            type="search" class="form-control form-control-sm" placeholder=""
+                            aria-controls="datatable" id="myInput" onkeyup="myFunction()"></label></div>
+
+            <div class="col" align="right">
+
                 <a href="{% url 'inventario:crear_inventario' %}">
                     <button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light"><i
                             class="fas fa-plus"></i> Agregar Inventario
                     </button>
                 </a>
             </div>
-
+            </div>
             {% if messages %}
                 <ul class="messages">
                     {% for message in messages %}
@@ -24,7 +31,7 @@
                 </ul>
             {% endif %}
             <br>
-            <table class="table table-hover table-dark">
+            <table class="table table-hover table-dark" id="myTable">
                 <thead>
                 <tr align="center">
                     <th scope="col">ID</th>
@@ -74,7 +81,6 @@
         </div>
 
         </div>
-
         <!-- ##########View US03##### -->
         {% for Inventario in inventarios %}
 
@@ -129,10 +135,28 @@
 
         {% endfor %}
 
-
-
     {% else %}
         <h1>No estas autenticado</h1>
     {% endif %}
+<script>
+function myFunction() {
+  var input, filter, table, tr, td, i, txtValue;
+  input = document.getElementById("myInput");
+  filter = input.value.toUpperCase();
+  table = document.getElementById("myTable");
+  tr = table.getElementsByTagName("tr");
+  for (i = 0; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[0];
+    if (td) {
+      txtValue = td.textContent || td.innerText;
+      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+    }
+  }
+}
 
+</script>
 {% endblock %}
