--- a/Vostok/material/templates/material/ver_material.html
+++ b/Vostok/material/templates/material/ver_material.html
@@ -22,7 +22,7 @@
 
                     <div id="datatable_filter" class="dataTables_filter"><label>Buscar:<input
                             type="search" class="form-control form-control-sm" placeholder=""
-                            aria-controls="datatable"></label></div>
+                            aria-controls="datatable" id="myInput" onkeyup="myFunction()"></label></div>
 
                 </div>
                 <div class="col">
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <br>
-            <table class="table table-hover table-dark">
+            <table class="table table-hover table-dark" id="myTable">
                 <tbody>
 
                 <div class="row">
@@ -133,13 +133,26 @@
             </tbody>
             </table>
             </div> <!-- container-fluid -->
-
-
-
-
-
-
-
+<script>
+function myFunction() {
+  var input, filter, table, tr, td, i, txtValue;
+  input = document.getElementById("myInput");
+  filter = input.value.toUpperCase();
+  table = document.getElementById("myTable");
+  tr = table.getElementsByTagName("tr");
+  for (i = 0; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[1];
+    if (td) {
+      txtValue = td.textContent || td.innerText;
+      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+    }
+  }
+}
+</script>
         {% else %}
             <h1>No estas autenticado</h1>
         {% endif %}
