--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -12,7 +12,7 @@
             <div class="row">
                  <div id="datatable_filter" class="col"><label>Buscar:<input
                             type="search" class="form-control form-control-sm" placeholder=""
-                            aria-controls="datatable" id="myInput" onkeyup="myFunction()"></label></div>
+                            aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
 
             <div class="col" align="right">
 
@@ -31,7 +31,7 @@
                 </ul>
             {% endif %}
             <br>
-            <table class="table table-hover table-dark" id="myTable">
+            <table class="table table-hover table-dark" id="Inventario">
                 <thead>
                 <tr align="center">
                     <th scope="col">ID</th>
@@ -139,11 +139,11 @@
         <h1>No estas autenticado</h1>
     {% endif %}
 <script>
-function myFunction() {
+function Filter() {
   var input, filter, table, tr, td, i, txtValue;
   input = document.getElementById("myInput");
   filter = input.value.toUpperCase();
-  table = document.getElementById("myTable");
+  table = document.getElementById("Inventario");
   tr = table.getElementsByTagName("tr");
   for (i = 0; i < tr.length; i++) {
     td = tr[i].getElementsByTagName("td")[0];
