--- a/Vostok/revision/templates/revision/ver_detalle_revision.html
+++ b/Vostok/revision/templates/revision/ver_detalle_revision.html
@@ -4,40 +4,42 @@
     <!--######## VIEW US42 ########-->
 
 
-                                    <h1 >Informacion de materiales en revision</h1>
+    <h1>Informacion de materiales en revision</h1>
 
 
-    {% if  materiales  %}
-        <h4 >Ambulancia: {{ ambulancia.nombre }}</h4>
-    <h4 >Fecha de revision: {{ fecha }}</h4>
+    {% if  materiales %}
+        <h4>Ambulancia: {{ ambulancia.nombre }}</h4>
+        <h4>Fecha de revision: {{ fecha }}</h4>
 
-       <p align="right"><a href="{% url "revision:revisiones" id=ambulancia.id %}"><button  class="btn btn-primary btn-rounded width-md waves-effect waves-light">Regresar a revisiones</button></a></p>
-         <div class="card-box">
-          <br>
+        <p align="right"><a href="{% url "revision:revisiones" id=ambulancia.id %}">
+            <button class="btn btn-primary btn-rounded width-md waves-effect waves-light">Regresar a revisiones</button>
+        </a></p>
+        <div class="card-box">
+        <br>
 
-                                    <div class="table-responsive">
-                                        <table class="table table-dark mb-0">
-                                            <thead>
-                                            <tr>
+        <div class="table-responsive">
+            <table class="table table-dark mb-0">
+                <thead>
+                <tr>
 
-                                                <th>Articulo</th>
-                                                <th>Cantidad</th>
+                    <th>Articulo</th>
+                    <th>Cantidad</th>
 
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-        {% for material in materiales %}
+                </tr>
+                </thead>
+                <tbody>
+                {% for material in materiales %}
 
-             <tr>
+                    <tr>
 
-                 <td>{{ material.material }}</td>
-                 <td>{{ material.cantidad }}</td>
+                        <td>{{ material.material }}</td>
+                        <td>{{ material.cantidad }}</td>
 
 
-             </tr>
+                    </tr>
 
-        {% endfor %}
-         </div>
+                {% endfor %}
+        </div>
     {% else %}
 
         <div class="account-pages mt-5 mb-5">
@@ -54,7 +56,11 @@
                                     <h3 class="mt-3 mb-2">Error de servidor</h3>
                                     <p class="text-muted mb-3">No se encuentran materiales de esta revision</p>
 
-                                    <a href="{% url "revision:revisiones" id=ambulancia.id %}"><button class="btn btn-primary btn-rounded width-md waves-effect waves-light">Regresar a revisiones</button></a>
+                                    <a href="{% url "revision:revisiones" id=ambulancia.id %}">
+                                        <button class="btn btn-primary btn-rounded width-md waves-effect waves-light">
+                                            Regresar a revisiones
+                                        </button>
+                                    </a>
                                 </div>
 
 
@@ -76,10 +82,10 @@
 
 
     {% endif %}
-       </tbody>
-                                        </table>
-                                    </div>
-                                </div>
+</tbody>
+</table>
+</div>
+    </div>
     <!--######## VIEW US421 ########-->
 
 {% endblock %}
